# Whistler-Blackcomb-v2

./: .cproject  .gitignore  .project  .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Dockerfile  LICENSE  Makefile  README.md  Whistler-Blackcomb.mex  cmake_install.cmake  script.jlink
.circleci/: config.yml
.github/: pull_request_template.md
board/: board.h  clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h  sdmmc_config.c  sdmmc_config.h
common/: CMakeLists.txt
common/CControl/: .cproject  .project  CMakeLists.txt
common/CControl/src/: Main.c
common/CControl/src/CControl/Documents/Examples/ArtificialIntelligence/Astar/: Astar.txt
common/CControl/src/CControl/Documents/Examples/ControlEngineering/Linear Quadratic Integral Control/: Linear_Quadratic_Integral_Control.txt
common/CControl/src/CControl/Documents/Examples/ControlEngineering/Model Reference Adaptive Control/: Model_Reference_Adaptive_Control.txt
common/CControl/src/CControl/Documents/Examples/Filtering/: filtfilt.txt
common/CControl/src/CControl/Documents/Examples/LinearAlgebra/: eig_sym.txt  hankel.txt  linsolve_chol.txt  linsolve_lup.txt  svd_golub_reinsch.txt
common/CControl/src/CControl/Documents/Examples/Optimization/: linprog.txt
common/CControl/src/CControl/Documents/Examples/SystemIdentification/: rls.txt
common/CControl/src/CControl/Headers/: CMakeLists.txt  Functions.h
common/CControl/src/CControl/Sources/ArtificialIntelligence/: Astar.c
common/CControl/src/CControl/Sources/Filtering/: ukf.c
common/CControl/src/CControl/Sources/LinearAlgebra/: linsolve_gauss.c
common/include/: CMakeLists.txt  GPS_interpret.h  IMU_interpret.h  bms.h  buffer.h  prediction.h  radio.h  radio_protocol.h  state_machine.h  variables.h
common/src/: CMakeLists.txt  GPS_interpret.c  IMU_interpret.c  bms.c  buffer.c  prediction.c  prediction_refactor.c  radio.c  radio_protocol.c  state_machine.c  variables.c
common/xbee/: CMakeLists.txt
common/xbee/ports/whistler/: platform_config.h  xbee_platform_whistler.c
common/xbee/src/xbee/: xbee_device.c
component/osa/: fsl_os_abstraction.h  fsl_os_abstraction_free_rtos.c  fsl_os_abstraction_free_rtos.h
component/uart/: uart_adapter.c
data/imu/: imu_datagram_error.txt  imu_datagram_test1.txt  imu_datagram_test2.txt  imu_uart_data_2.txt  imu_uart_data_3.txt
doc/: 0-Misc-Bugs.md  1-MCUXpresso-Setup.md  1-Teensy-Upload.md  2-RTOS-Basics.md  2-x86-Compilation.md  3-Teensy-Upload.md  3-x86-Compilation.md  4-Continuous-Integration.md  4-Travis-CI.md  5-Radio.md  5-Windows-Compilation-with-Cygwin.md  6-Continuous-Integration.md  6-Misc-Bugs.md  6-Radio.md  7-CAN.md  CAN.md  Continuous-Integration.md  Firmware-Upload.md  MCUXpresso-Setup.md  Misc-Bugs.md  Onboarding.md  Radio.md  SEGGER_RTT.md  Windows-Compilation-with-Cygwin.md  WritingCleanCode.md  x86-Compilation.md
doc/sdmmc/: ChangeLogKSDK.txt
doc/sdmmc/host/: ChangeLogKSDK.txt
drivers/: fsl_sdhc.c  fsl_uart.c  fsl_uart.h
drivers/freertos/: fsl_i2c_freertos.c  fsl_i2c_freertos.h  fsl_uart_freertos.c  fsl_uart_freertos.h
envs/: CMakeLists.txt
envs/board/include/: hal.h  hal_io.h  hal_uart.h  time.h
envs/board/src/: hal.c  hal_can.c  hal_io.c  hal_rtt.c  hal_sd.c  hal_time.c  hal_uart.c  time.c
envs/include/: hal.h  hal_can.h  hal_io.h  hal_rtt.h  hal_sd.h  hal_time.h  hal_uart.h
envs/x86/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  env_config.h
envs/x86/freertos/: CMakeLists.txt
envs/x86/freertos/portable/: port.c
envs/x86/include/: hal.h  hal_time.h  hal_uart.h  stdio_controller.h
envs/x86/src/: console.c  hal.c  hal_can.c  hal_io.c  hal_rtt.c  hal_sd.c  hal_time.c  hal_uart.c  stdio_controller.c
fatfs/source/: diskio.c  diskio.h  ff.c
fatfs/source/fsl_ram_disk/: fsl_ram_disk.c  fsl_ram_disk.h
fatfs/source/fsl_sd_disk/: fsl_sd_disk.c  fsl_sd_disk.h
freertos/freertos_kernel/: CMakeLists.txt
freertos/freertos_kernel/portable/MemMang/: heap_useNewlib.c
sdmmc/host/: fsl_sdmmc_host.c  fsl_sdmmc_host.h
sdmmc/inc/: fsl_sd.h  fsl_sdmmc_common.h  fsl_sdmmc_spec.h
sdmmc/osa/: fsl_sdmmc_osa.c  fsl_sdmmc_osa.h
sdmmc/src/: fsl_sd.c  fsl_sdmmc_common.c
source/: CMakeLists.txt  FreeRTOSConfig.h  IMU_interpret.c  IMU_interpret.h  Whistler-Blackcomb.c  ffconf.h  prediction.c  prediction.h
test/: CMakeLists.txt  basicTest.c  test_IMU_interp.c  test_buffer.c  test_prediction.c  test_radio_protocol.c  test_state_machine.c
tools/: sim-generator.c
utilities/SEGGER_RTT_V754b/RTT/: SEGGER_RTT.h
utilities/SEGGER_RTT_V754b/Syscalls/: SEGGER_RTT_Syscalls_GCC.c
